welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:13: error: value Pink is not a member of object java.awt.Color
		if(getCouleurSol() == Color.Pink) {
                                            ^SlugSnail:14: error: not found: value solEstPink
			solEstPink = true;
                        ^SlugSnail:13: error: type mismatch;
 found   : Unit
 required: Boolean
		if(getCouleurSol() == Color.Pink) {
                ^SlugSnail:11: error: type mismatch;
 found   : Unit
 required: Boolean
	if(!estFaceMur) {
        ^SlugSnail:22: error: not found: value solEstPink
	return solEstPink
               ^SlugSnail:30: error: not found: value isFacingTrail
	if (isFacingTrail)
            ^SlugSnail:39: error: not found: value isFacingTrail
		if(!isFacingTrail) 
                    ^